--- a/backup/图片测试.md
+++ b/backup/图片测试.md
@@ -1,3 +1,3 @@
 # **自建图床图片显示测试**
 ##  *第一张*
-![测试图片](https://image.matyy.cloudns.biz/file/398f4e5e5ec3ece2b3ee7.jpg "测试图片")
+`Gmeek-html<img src="https://image.matyy.cloudns.biz/file/398f4e5e5ec3ece2b3ee7.jpg">`
